--- a/index.html
+++ b/index.html
@@ -237,6 +237,16 @@
       text-decoration: none;
     }
 
+    .impressum {
+      margin-top: 5em;
+      color: #7A869A;
+    }
+
+    .impressum a {
+      color: inherit;
+      text-decoration: none;
+    }
+
     .attribution {
       margin-top: 5em;
     }
@@ -316,6 +326,11 @@
         </a>
       </li>
     </ol>
+    <div class='impressum'>
+      <p>BTD - Better Things Digital GmbH<br />Steinebach 7/101, 6850 Dornbirn, Austria</p>
+      <p><a href='mailto:hi@betterthings.digital'>hi@betterthings.digital</a></p>
+      <p>FN 489075d, Landesgericht Feldkirch<br />Executive Directors: Florian Hämmerle, Patrick Schedler</p>
+    </div>
     <p class='attribution'>Icons by
       <a href='https://fontawesome.com/license'>Font Awesome</a>
     </p>
