--- a/index.html
+++ b/index.html
@@ -329,7 +329,7 @@
     <div class='impressum'>
       <p>BTD - Better Things Digital GmbH<br />Steinebach 7/101, 6850 Dornbirn, Austria</p>
       <p><a href='mailto:hi@betterthings.digital'>hi@betterthings.digital</a></p>
-      <p>FN 489075d, Landesgericht Feldkirch<br />Executive Directors: Florian Hämmerle, Patrick Schedler</p>
+      <p>FN 489075d, Landesgericht Feldkirch<br />VAT-ID: ATU73177769<br />Executive Directors: Florian Hämmerle, Patrick Schedler</p>
     </div>
     <p class='attribution'>Icons by
       <a href='https://fontawesome.com/license'>Font Awesome</a>
