add closing body tag, remove whitespace

--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!doctype html>
 <html lang="en">
-
 <head>
   <meta charset="utf-8">
   <title>Better Things Digital</title>
@@ -259,7 +258,6 @@
     }
   </style>
 </head>
-
 <body>
   <header>
     <div class='container'>
@@ -353,5 +351,5 @@
       <a href='https://fontawesome.com/license'>Font Awesome</a>
     </p>
   </footer>
-
+</body>
 </html>
