add cloudflare cookie info

--- a/index.html
+++ b/index.html
@@ -201,7 +201,11 @@
     }
 
     .privacy,
-    .privacy a,
+    .privacy a {
+      color: #42526E;
+      text-decoration: none;
+    }
+
     .attribution,
     .attribution a {
       color: #B3BAC5;
