--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
     <div class='container'>
       <h2>A
         <strong class='unicorn'>digital studio</strong> based in the Alps. We work with you to build great products that have an impact on people.</h2>
-      <p class='hashtags'>#backend #frontend #webservice #development #design #agile #workshops</p>
+      <p class='hashtags'>#backend #frontend #mobile #webservice #development #designthinking #agile #workshops #concept</p>
       <p>
         <a class='button unicorn' href='mailto:hi@betterthings.digital'>WORK WITH US</a>
       </p>
@@ -245,10 +245,7 @@
   <section>
     <div class='container'>
       <h2>We love tech. But we only choose what's right for the job. Here's a selection of what we've used recently.</h2>
-      <p class='hashtags'>#node.js #docker #graphql #rest #reactjs #elasticsearch #redis #postgres</p>
-      <p>
-        <a class='button unicorn' href='mailto:hi@betterthings.digital'>WORK WITH US</a>
-      </p>
+      <p class='hashtags'>#node.js #docker #graphql #rest #reactjs #elasticsearch #redis #postgres #python #go</p>
     </div>
   </section>
   <section>
@@ -257,8 +254,25 @@
       <h2>Our objective is to build quality software that performs well, improves user satisfaction, and helps you achieve your
         business goals.</h2>
       <p class='hashtags'>#sustainable #maintainable #scalable #stable #efficient #solution-oriented #performant #user-centered</p>
+    </div>
+  </section>
+  <section>
+    <div class="container">
+      <h2>We are delivering value for awesome companies and partners.</h2>
+      <p class="hashtags">#awesome #startup #media #tv #machinedata #fullstack #iot</p>
+      <p>AZ Medien, Crate.io, Radio 24, TV24, TV25, Virgin Radio Switzerland, ...</p>
+    </div>
+    <p>
+      <a class='button unicorn' href='mailto:hi@betterthings.digital'>WORK WITH US</a>
+    </p>
+  </section>
+  <section>
+    <div class="container">
+      <h2>Join our team. We are hiring!</h2>
+      <p class="hashtags">#fulltime #parttime #internship #studentswelcome</p>
+      <p>You are interested in technology, challenges, and have a background in software development, design, or some related field? Let us know via one of the usual channels, or visit us at our office for a coffee or other drink.</p>
       <p>
-        <a class='button unicorn' href='mailto:hi@betterthings.digital'>WORK WITH US</a>
+        <a class='button unicorn' href='mailto:hi@betterthings.digital'>JOIN US</a>
       </p>
     </div>
   </section>
