add cratedb & react native

--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
   <section>
     <div class='container'>
       <h2>We love tech. But we only choose what's right for the job. Here's a selection of what we've used recently.</h2>
-      <p class='hashtags'>#node.js #docker #graphql #rest #reactjs #elasticsearch #redis #postgres #python #go</p>
+      <p class='hashtags'>#node.js #docker #graphql #rest #reactjs #reactnative #elasticsearch #redis #cratedb #postgres #python #go</p>
     </div>
   </section>
   <section>
