--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
   <section>
     <div class='container'>
       <h2>We love tech. But we only choose what's right for the job. Here's a selection of what we've used recently.</h2>
-      <p class='hashtags'>#node.js #docker #graphql #rest #reactjs #reactnative #elasticsearch #redis #cratedb #postgres #python #go</p>
+      <p class='hashtags'>#node.js #docker #graphql #typescript #javascript #rest #reactjs #reactnative #elasticsearch #redis #cratedb #postgres #python #go</p>
     </div>
   </section>
   <section>
@@ -259,7 +259,7 @@
   <section>
     <div class="container">
       <h2>We are delivering value for awesome companies and partners.</h2>
-      <p class="hashtags">#awesome #startup #media #tv #machinedata #fullstack #iot</p>
+      <p class="hashtags">#startup #media #tv #machinedata #iot #ecommerce</p>
       <p>AZ Medien, Crate.io, Radio 24, TV24, TV25, Virgin Radio Switzerland, ...</p>
     </div>
     <p>
