add open-graph properties

--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
   <meta name="description" content="A digital studio based in the Alps. We work with you to build great products." />
   <meta name="keywords" content="better things, digital, backend, frontend, webservice, development, agile, workshops, node.js, docker, graphql, rest, reactjs, elasticsearch, redis, postgres, mongodb, sustainable, maintainable, scalable, stable, efficient, solution-oriented, performant, user-centered">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://betterthings.digital" />
+  <meta property="og:title" content="Better Things Digital" />
+  <meta property="og:description" content="A digital studio based in the Alps. We work with you to build great products." />
+  <meta property="og:image" content="/images/panorama.jpg" />
   <link rel="shortcut icon" href="/favicon.png" />
   <style>
     /* fonts from google fonts */
