--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
   <meta property="og:url" content="https://betterthings.digital" />
   <meta property="og:title" content="Better Things Digital" />
   <meta property="og:description" content="A digital studio based in the Alps. We work with you to build great products." />
-  <meta property="og:image" content="/images/panorama.jpg" />
+  <meta property="og:image" content="https://betterthings.digital/images/panorama.jpg" />
+  <meta property="fb:app_id" content="507043409678073" />
   <link rel="shortcut icon" href="/favicon.png" />
   <style>
     /* fonts from google fonts */
