--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
   <section>
     <div class='container'>
       <h2>We love tech. But we only choose what's right for the job. Here's a selection of what we've used recently.</h2>
-      <p class='hashtags'>#node.js #docker #graphql #typescript #javascript #rest #reactjs #reactnative #elasticsearch #redis #cratedb #postgres #python #go</p>
+      <p class='hashtags'>#node.js #docker #graphql #typescript #javascript #rest #reactjs #reactnative #elasticsearch #redis #cratedb #postgres #python #go #terraform</p>
     </div>
   </section>
   <section>
@@ -263,9 +263,9 @@
   </section>
   <section>
     <div class="container">
-      <h2>We are delivering value for awesome companies and partners.</h2>
-      <p class="hashtags">#startup #media #tv #machinedata #iot #ecommerce</p>
-      <p>AZ Medien, Crate.io, Radio 24, TV24, TV25, Virgin Radio Switzerland, ...</p>
+      <h2>We are delivering value for awesome companies and partners. Among them
+        are funded startups as well as worldwide acting corporations.</h2>
+      <p class="hashtags">#ecommerce #machinedata #iot #media #tv</p>
     </div>
     <p>
       <a class='button unicorn' href='mailto:hi@betterthings.digital'>WORK WITH US</a>
