update managing partners

--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@
     <div class='impressum'>
       <p>BTD - Better Things Digital GmbH<br />Steinebach 7/101, 6850 Dornbirn, Austria</p>
       <p><a href='mailto:hi@betterthings.digital'>hi@betterthings.digital</a></p>
-      <p>FN 489075d, Landesgericht Feldkirch<br />VAT-ID: ATU73177769<br />Managing Partners: Florian Hämmerle, Patrick Schedler</p>
+      <p>FN 489075d, Landesgericht Feldkirch<br />VAT-ID: ATU73177769<br />CEO: Patrick Schedler</p>
     </div>
     <p class='privacy'>
       <a href="/privacy.html">Privacy Notes</a>
