--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
   <meta name="keywords" content="better things, digital, backend, frontend, webservice, development, agile, workshops, node.js, docker, graphql, rest, reactjs, elasticsearch, redis, postgres, mongodb, sustainable, maintainable, scalable, stable, efficient, solution-oriented, performant, user-centered">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://betterthings.digital" />
+  <meta property="og:url" content="https://betterthings-digital.com" />
   <meta property="og:title" content="Better Things Digital" />
   <meta property="og:description" content="A digital studio based in the Alps. We work with you to build great products." />
-  <meta property="og:image" content="https://betterthings.digital/images/panorama.jpg" />
+  <meta property="og:image" content="https://betterthings-digital.com/images/panorama.jpg" />
   <link rel="shortcut icon" href="/favicon.png" />
   <style>
     /* fonts from google fonts */
@@ -243,7 +243,7 @@
         <strong class='unicorn'>digital studio</strong> based in the Alps. We work with you to build great products that have an impact on people.</h2>
       <p class='hashtags'>#backend #frontend #mobile #webservice #development #designthinking #agile #workshops #concept</p>
       <p>
-        <a class='button unicorn' href='mailto:hi@betterthings.digital'>WORK WITH US</a>
+        <a class='button unicorn' href='mailto:hi@betterthings-digital.com'>WORK WITH US</a>
       </p>
     </div>
   </section>
@@ -268,7 +268,7 @@
       <p class="hashtags">#ecommerce #machinedata #iot #media #tv</p>
     </div>
     <p>
-      <a class='button unicorn' href='mailto:hi@betterthings.digital'>WORK WITH US</a>
+      <a class='button unicorn' href='mailto:hi@betterthings-digital.com'>WORK WITH US</a>
     </p>
   </section>
   <section>
@@ -277,7 +277,7 @@
       <p class="hashtags">#fulltime #parttime #internship #studentswelcome</p>
       <p>You are interested in technology, challenges, and have a background in software development, design, or some related field? Let us know via one of the usual channels, or visit us at our office for a coffee or other drink.</p>
       <p>
-        <a class='button unicorn' href='mailto:hi@betterthings.digital'>JOIN US</a>
+        <a class='button unicorn' href='mailto:hi@betterthings-digital.com'>JOIN US</a>
       </p>
     </div>
   </section>
@@ -293,8 +293,8 @@
       </li>
     </ol>
     <div class='impressum'>
-      <p>BTD - Better Things Digital GmbH<br />Steinebach 7/101, 6850 Dornbirn, Austria</p>
-      <p><a href='mailto:hi@betterthings.digital'>hi@betterthings.digital</a></p>
+      <p>BTD - Better Things Digital GmbH<br />Widagasse 11, 6850 Dornbirn, Austria</p>
+      <p><a href='mailto:hi@betterthings-digital.com'>hi@betterthings-digital.com</a></p>
       <p>FN 489075d, Landesgericht Feldkirch<br />VAT-ID: ATU73177769<br />CEO: Patrick Schedler</p>
     </div>
     <p class='privacy'>
