--- a/privacy.html
+++ b/privacy.html
@@ -376,7 +376,7 @@
       <h4>Auskunft, Berichtigung und Löschung deiner persönlichen Daten</h4>
       <p>
         Möchtest du erfahren welche persönlichen Daten wir über dich gespeichert haben
-        send uns eine Email an <a href="mailto:hi@betterthings.digital">hi@betterthings.digital</a>.
+        send uns eine Email an <a href="mailto:hi@betterthings-digital.com">hi@betterthings-digital.com</a>.
         Über den gleichen Weg kannst du uns mitteilen, dass sich Daten von dir geändert haben 
         oder du möchtest dass wir über dich gespeicherte Daten löschen.
       </p>
@@ -387,7 +387,7 @@
       <h4>Du darfst uns Emails senden</h4>
       <p>
         Über Projektideen, Anfragen, etc. freuen wir uns jederzeit. Du darfst uns 
-        diesbezüglich gerne eine Email an <a href="mailto:hi@betterthings.digital">hi@betterthings.digital</a> senden.
+        diesbezüglich gerne eine Email an <a href="mailto:hi@betterthings-digital.com">hi@betterthings-digital.com</a> senden.
       </p>
     </div>
   </section>
@@ -401,8 +401,8 @@
   </section>
   <footer>
     <div class='impressum'>
-      <p>BTD - Better Things Digital GmbH<br />Steinebach 7/101, 6850 Dornbirn, Austria</p>
-      <p><a href='mailto:hi@betterthings.digital'>hi@betterthings.digital</a></p>
+      <p>BTD - Better Things Digital GmbH<br />Widagasse 11, 6850 Dornbirn, Austria</p>
+      <p><a href='mailto:hi@betterthings-digital.com'>hi@betterthings-digital.com</a></p>
       <p>FN 489075d, Landesgericht Feldkirch<br />VAT-ID: ATU73177769<br />CEO: Patrick Schedler</p>
     </div>
     <p class='privacy'>
